fix: testimoni alignment, name changes in layanan

--- a/public/style/testimoni.css
+++ b/public/style/testimoni.css
@@ -10,6 +10,8 @@
     padding: 15px;
     margin-bottom: 5px;
     border-radius: 10px;
+    align-items: center; 
+    justify-content: center;
 }
 
 .testimoni-box:hover {
@@ -19,11 +21,9 @@
 
 .testimoni img {
     flex: none;
-    
     width: 15vw;
-    height: 16vw;
+    height: 15vw;
     object-fit: cover;
-
     border-radius: 10px;
 }
 
@@ -31,28 +31,37 @@
     .testimoni img {
         width: 30vw;
         height: 30vw;
+        
     }
-    
+
+    .testimoni div {
+        flex-direction:column;
+    }
+
 }
 
 .testimony-title {
     font-size: 1.5em;
     font-weight: bold;
     text-align: center;
-    font-family: 'Poppins';
 }
 
 .testimoni-h3 {
     font-weight: bold;
     margin-bottom: 20px;
-    text-align: center;
+    text-align: center; 
 }
 
 .testimoni-p {
     margin-bottom: 20px;
-    text-align: right;
+    text-align: center;
 }
 
+.testimoni-container {
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 10px; 
+}
 
 /*Pilihan warna terang: 
 Red: #E53A40
